// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the NavBar It should render the button 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <button
    aria-controls="navbarColor01"
    aria-expanded="false"
    aria-label="Toggle navigation"
    className="navbar-toggler"
    data-target="#navbarColor01"
    data-toggle="collapse"
    type="button"
>
    <span
        className="navbar-toggler-icon"
    />
</button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "aria-controls": "navbarColor01",
      "aria-expanded": "false",
      "aria-label": "Toggle navigation",
      "children": <span
        className="navbar-toggler-icon"
/>,
      "className": "navbar-toggler",
      "data-target": "#navbarColor01",
      "data-toggle": "collapse",
      "type": "button",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "className": "navbar-toggler-icon",
      },
      "ref": null,
      "rendered": null,
      "type": "span",
    },
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "aria-controls": "navbarColor01",
        "aria-expanded": "false",
        "aria-label": "Toggle navigation",
        "children": <span
          className="navbar-toggler-icon"
/>,
        "className": "navbar-toggler",
        "data-target": "#navbarColor01",
        "data-toggle": "collapse",
        "type": "button",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "navbar-toggler-icon",
        },
        "ref": null,
        "rendered": null,
        "type": "span",
      },
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Testing the NavBar It should render the form 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <form
    className="form-inline my-2 my-lg-0"
>
    <button
        className="btn btn-danger my-2 my-sm-0"
        type="submit"
    >
        Logout
    </button>
</form>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <button
        className="btn btn-danger my-2 my-sm-0"
        type="submit"
>
        Logout
</button>,
      "className": "form-inline my-2 my-lg-0",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Logout",
        "className": "btn btn-danger my-2 my-sm-0",
        "type": "submit",
      },
      "ref": null,
      "rendered": "Logout",
      "type": "button",
    },
    "type": "form",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <button
          className="btn btn-danger my-2 my-sm-0"
          type="submit"
>
          Logout
</button>,
        "className": "form-inline my-2 my-lg-0",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Logout",
          "className": "btn btn-danger my-2 my-sm-0",
          "type": "submit",
        },
        "ref": null,
        "rendered": "Logout",
        "type": "button",
      },
      "type": "form",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
